# ScoreForge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ScoreForge.spec  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  CODE_SIGNING.md  COMMAND_REFERENCE.md  TESTING.md  USER_GUIDE.md
scripts/: build-linux.sh  build-macos.sh  build-windows.bat
sheet_music_scanner/: __init__.py  __main__.py  config.py  main.py
sheet_music_scanner/core/: __init__.py  autosave.py  batch_processor.py  command_executor.py  command_parser.py  midi_player.py  operations.py  plugins.py  score.py  templates.py
sheet_music_scanner/export/: __init__.py  midi_exporter.py  musicxml_exporter.py  pdf_exporter.py
sheet_music_scanner/gui/: __init__.py  command_input.py  editor_panel.py  interactive_editor.py  main_window.py  playback_controls.py  score_view.py  theme.py  undo_history_panel.py
sheet_music_scanner/gui/dialogs/: __init__.py  batch_dialog.py  settings_dialog.py  template_dialog.py  transpose_dialog.py
sheet_music_scanner/omr/: __init__.py  audiveris_adapter.py  oemer_adapter.py  processor.py
sheet_music_scanner/utils/: __init__.py  image_processing.py
tests/: __init__.py  test_commands.py  test_core.py
